# wac

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WalfasLayers.md  WalfasScript.txt  a.swift  drawwalfas.js
doc/: dna.md
doc/design/: gui.drawio
gl/: README.md  normal.frag  normal.vert  standard.frag  text.frag  text.vert
lang/: en-us.yml  langs.yml  update_pot.sh  wac.pot  zh-cn.yml  zh_CN.mo  zh_CN.po
src/: CMakeLists.txt  WACEditor.h  WACEditor.m  cocoa.m  design.md  i18n.h  wac.m
src/ckc/: CKCCharacter.h  CKCCharacter.m  CKCEditorComponent.h  CKCEditorComponent.m  CKCEditorItem.h  CKCScene.h  CKCScene.m  CKCWalfasDNA.h  CKCWalfasDNA.m  CMakeLists.txt
src/gui/: WACBase.m  WACLang.h  WACLang.m  WACRender.h  WACRender.m  WACWindow.h  WACWindow.m  WFCBase.m  WFCLang.h  WFCLang.m  WFCRender.h  WFCRender.m  WFCUIEvent.h  WFCWindow.h  WFCWindow.m
src/pk/: CMakeLists.txt  PKException.h  PKException.m  PKFont.h  PKFont.m  PKLoader.h  PKLoader.m  PKSerialization.h  PKSerialization.m
src/wfc/: CMakeLists.txt  WFCBase.m  WFCEntry.h  WFCEntry.m  WFCLang.h  WFCLang.m  WFCMenu.h  WFCRender.h  WFCRender.m  WFCUIEvent.h  WFCWindow.h  WFCWindow.m  glad.c
src/wfc/controls/: CMakeLists.txt  WFCBaseControl.h  WFCBaseControl.m  WFCStatic.h  WFCStatic.m
src/wfc/glad/: glad.h
src/wfc/renderers/: CMakeLists.txt  WFCRenderer.h  WFCRenderer.m
src/wfc/renderers/gl/: CMakeLists.txt  WFCGLRenderer.h  WFCGLRenderer.m
ui/: wac.glade  wac.ui
